# easypkg

./: conftest.py  pyproject.toml  readme.md
.github/workflows/: build-setup.yml
setup/lib/container/v1/: base.dockerfile  catch2.dockerfile  test.dockerfile
setup/share/easybuild/easyconfigs/c/Catch2/: Catch2-3.8.1-GCCcore-14.3.0.eb
setup/share/easybuild/easyconfigs/o/OpenMPI/: OpenMPI-5.0.7-GCC-14.3.0.eb
src/easypkg/: __init__.py
src/easypkg/app/: __init__.py
src/easypkg/convert/: __init__.py
src/easypkg/db/: __init__.py
src/easypkg/lmod/: __init__.py
src/easypkg/package/: __init__.py.orig
src/easypkg/polyfill/: __init__.py  luaparser.py
src/easypkg/spack/: __init__.py
test/share/testenv/: minimal.dockerfile
